--- a/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
@@ -31,57 +31,85 @@
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
 
-    <TextView
-        android:id="@+id/passTitle"
-        android:layout_width="wrap_content"
+    <android.support.constraint.ConstraintLayout
+        android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:text="@string/welcome_pass_title"
-        app:layout_constraintBottom_toTopOf="@id/pass"
-        app:layout_constraintTop_toBottomOf="@id/description"
-        app:layout_constraintVertical_chainStyle="packed" />
-
-    <EditText
-        android:id="@+id/pass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@id/strengthText"
-        app:layout_constraintTop_toBottomOf="@id/passTitle"
-        tools:ignore="Autofill,LabelFor" />
-
-    <TextView
-        android:id="@+id/strengthText"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_pass_medium"
-        app:layout_constraintBottom_toTopOf="@id/confirmPassTitle"
-        app:layout_constraintTop_toBottomOf="@id/pass" />
-
-    <TextView
-        android:id="@+id/confirmPassTitle"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_confirm_pass_title"
-        app:layout_constraintBottom_toTopOf="@id/confirmPass"
-        app:layout_constraintTop_toBottomOf="@id/strengthText" />
-
-    <EditText
-        android:id="@+id/confirmPass"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:inputType="textPassword"
-        app:layout_constraintBottom_toTopOf="@id/passMatchError"
-        app:layout_constraintTop_toBottomOf="@id/confirmPassTitle"
-        tools:ignore="Autofill,LabelFor" />
-
-    <TextView
-        android:id="@+id/passMatchError"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="@string/welcome_pass_not_much"
-        android:textColor="@color/common_error_color"
         app:layout_constraintBottom_toTopOf="@id/btnProceed"
-        app:layout_constraintTop_toBottomOf="@id/confirmPass" />
+        app:layout_constraintTop_toBottomOf="@id/description">
+
+        <TextView
+            android:id="@+id/passTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/welcome_pass_title"
+            android:textSize="@dimen/welcome_passwords_title_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/pass"
+            app:layout_constraintTop_toTopOf="parent"
+            app:layout_constraintVertical_chainStyle="packed" />
+
+        <EditText
+            android:id="@+id/pass"
+            style="@style/welcome_password_view_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            app:layout_constraintBottom_toTopOf="@id/strengthText"
+            app:layout_constraintTop_toBottomOf="@id/passTitle"
+            tools:ignore="Autofill,LabelFor" />
+
+        <com.mw.beam.beamwallet.core.views.PasswordProgress
+            android:id="@+id/progress"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            app:layout_constraintBottom_toTopOf="@id/strengthText"
+            app:layout_constraintTop_toBottomOf="@id/pass" />
+
+        <TextView
+            android:id="@+id/strengthText"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:alpha="0.5"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/welcome_pass_medium"
+            android:textSize="@dimen/welcome_passwords_info_text_size"
+            app:layout_constraintBottom_toTopOf="@id/confirmPassTitle"
+            app:layout_constraintTop_toBottomOf="@id/progress" />
+
+        <TextView
+            android:id="@+id/confirmPassTitle"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif"
+            android:text="@string/welcome_confirm_pass_title"
+            android:textSize="@dimen/welcome_passwords_title_text_size"
+            android:textStyle="bold"
+            app:layout_constraintBottom_toTopOf="@id/confirmPass"
+            app:layout_constraintTop_toBottomOf="@id/strengthText" />
+
+        <EditText
+            android:id="@+id/confirmPass"
+            style="@style/welcome_password_view_style"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:inputType="textPassword"
+            app:layout_constraintBottom_toTopOf="@id/passMatchError"
+            app:layout_constraintTop_toBottomOf="@id/confirmPassTitle"
+            tools:ignore="Autofill,LabelFor" />
+
+        <TextView
+            android:id="@+id/passMatchError"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:fontFamily="sans-serif-light"
+            android:text="@string/welcome_pass_not_much"
+            android:textColor="@color/common_error_color"
+            android:textSize="@dimen/welcome_passwords_info_text_size"
+            app:layout_constraintBottom_toBottomOf="parent"
+            app:layout_constraintTop_toBottomOf="@id/confirmPass" />
+
+    </android.support.constraint.ConstraintLayout>
 
     <com.mw.beam.beamwallet.core.views.BeamButton
         android:id="@+id/btnProceed"
