--- a/android-application/app/src/main/res/values/attrs.xml
+++ b/android-application/app/src/main/res/values/attrs.xml
@@ -6,4 +6,8 @@
         <attr name="button_text_color" format="integer" />
         <attr name="button_state_list" format="integer" />
     </declare-styleable>
+
+    <declare-styleable name="PasswordProgress">
+        <attr name="strength" format="integer" />
+    </declare-styleable>
 </resources>
