--- a/android-application/app/src/main/res/drawable/edit_text_underline.xml
+++ b/android-application/app/src/main/res/drawable/edit_text_underline.xml
@@ -4,9 +4,8 @@
         <layer-list>
             <item android:bottom="1dp" android:left="-2dp" android:right="-2dp" android:top="-2dp">
                 <shape android:shape="rectangle">
-                    <stroke android:width="1px" android:color="@color/password_underline_color" />
+                    <stroke android:width="1dp" android:color="@color/password_underline_color" />
 
-                    <solid android:color="#00FFFFFF" />
 
                     <padding android:bottom="3dp" android:left="3dp" android:right="3dp" android:top="3dp" />
                 </shape>
