--- a/android-application/app/src/main/res/values/dimens.xml
+++ b/android-application/app/src/main/res/values/dimens.xml
@@ -17,16 +17,22 @@
     <dimen name="welcome_button_text_padding_top">11dp</dimen>
     <dimen name="welcome_button_text_padding_bottom">11dp</dimen>
     <dimen name="welcome_button_create_margin_top">73dp</dimen>
-    <dimen name="welcome_button_restore_margin_top">16dp</dimen>
+    <dimen name="welcome_button_margin_top">16dp</dimen>
     <dimen name="welcome_logo_width">159dp</dimen>
     <dimen name="welcome_logo_height">142dp</dimen>
+    <dimen name="welcome_logo_margin_top">153dp</dimen>
     <dimen name="welcome_logo_text_margin_top">20dp</dimen>
     <dimen name="welcome_description_text_size">12sp</dimen>
     <dimen name="welcome_passwords_padding">44dp</dimen>
     <dimen name="welcome_passwords_title_padding_top">25dp</dimen>
+    <dimen name="welcome_passwords_title_text_size">18sp</dimen>
+    <dimen name="welcome_passwords_info_text_size">12sp</dimen>
     <dimen name="welcome_passwords_description_padding_top">14dp</dimen>
     <dimen name="welcome_passwords_button_margin_bottom">41dp</dimen>
     <dimen name="welcome_passwords_button_margin_start_end">9dp</dimen>
+    <dimen name="welcome_passwords_progress_item_margin">8dp</dimen>
+    <dimen name="welcome_password_title_padding_bottom">13dp</dimen>
+    <dimen name="welcome_main_margin_side">53dp</dimen>
 
     <!--OpenWalletActivity-->
     <dimen name="open_wallet_password_margin">32dp</dimen>
