some style fixes

--- a/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
@@ -42,6 +42,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
+            android:paddingBottom="@dimen/welcome_password_title_padding_bottom"
             android:text="@string/welcome_pass_title"
             android:textSize="@dimen/welcome_passwords_title_text_size"
             android:textStyle="bold"
@@ -54,15 +55,15 @@
             style="@style/welcome_password_view_style"
             android:layout_width="match_parent"
             android:layout_height="wrap_content"
-            android:inputType="textPassword"
-            app:layout_constraintBottom_toTopOf="@id/strengthText"
+            app:layout_constraintBottom_toTopOf="@id/strengthView"
             app:layout_constraintTop_toBottomOf="@id/passTitle"
             tools:ignore="Autofill,LabelFor" />
 
-        <com.mw.beam.beamwallet.core.views.PasswordProgress
-            android:id="@+id/progress"
+        <com.mw.beam.beamwallet.core.views.PasswordStrengthView
+            android:id="@+id/strengthView"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
+            android:layout_marginTop="@dimen/welcome_passwords_items_offset"
             app:layout_constraintBottom_toTopOf="@id/strengthText"
             app:layout_constraintTop_toBottomOf="@id/pass" />
 
@@ -72,16 +73,19 @@
             android:layout_height="wrap_content"
             android:alpha="0.5"
             android:fontFamily="sans-serif-light"
+            android:paddingTop="@dimen/welcome_passwords_items_offset"
             android:text="@string/welcome_pass_medium"
             android:textSize="@dimen/welcome_passwords_info_text_size"
             app:layout_constraintBottom_toTopOf="@id/confirmPassTitle"
-            app:layout_constraintTop_toBottomOf="@id/progress" />
+            app:layout_constraintTop_toBottomOf="@id/strengthView" />
 
         <TextView
             android:id="@+id/confirmPassTitle"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif"
+            android:paddingTop="23dp"
+            android:paddingBottom="@dimen/welcome_password_title_padding_bottom"
             android:text="@string/welcome_confirm_pass_title"
             android:textSize="@dimen/welcome_passwords_title_text_size"
             android:textStyle="bold"
@@ -103,6 +107,7 @@
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
+            android:paddingTop="@dimen/welcome_passwords_items_offset"
             android:text="@string/welcome_pass_not_much"
             android:textColor="@color/common_error_color"
             android:textSize="@dimen/welcome_passwords_info_text_size"
@@ -117,6 +122,7 @@
         android:layout_marginStart="@dimen/welcome_passwords_button_margin_start_end"
         android:layout_marginEnd="@dimen/welcome_passwords_button_margin_start_end"
         android:layout_marginBottom="@dimen/welcome_passwords_button_margin_bottom"
+        app:button_icon="@drawable/ic_btn_proceed"
         app:button_text="@string/welcome_proceed_to_wallet"
         app:layout_constraintBottom_toBottomOf="parent" />
 
