--- a/android-application/app/src/main/res/values/attrs.xml
+++ b/android-application/app/src/main/res/values/attrs.xml
@@ -7,7 +7,7 @@
         <attr name="button_state_list" format="integer" />
     </declare-styleable>
 
-    <declare-styleable name="PasswordProgress">
+    <declare-styleable name="PasswordStrengthView">
         <attr name="strength" format="integer" />
     </declare-styleable>
 </resources>
