--- a/android-application/app/src/main/res/values/styles.xml
+++ b/android-application/app/src/main/res/values/styles.xml
@@ -46,6 +46,8 @@
     <!-- OpenWalletActivity -->
     <style name="welcome_password_view_style">
         <item name="android:textColor">@color/password_text_color</item>
+        <item name="android:textSize">@dimen/welcome_passwords_text_size</item>
+        <item name="android:textStyle">bold</item>
         <item name="android:textColorHint">@color/password_text_color</item>
         <item name="android:inputType">textPassword</item>
         <item name="android:background">@drawable/edit_text_underline</item>
