--- a/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_passwords.xml
@@ -39,13 +39,10 @@
 
         <TextView
             android:id="@+id/passTitle"
+            style="@style/common_password_title_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
-            android:paddingBottom="@dimen/welcome_password_title_padding_bottom"
             android:text="@string/welcome_pass_title"
-            android:textSize="@dimen/welcome_passwords_title_text_size"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/pass"
             app:layout_constraintTop_toTopOf="parent"
             app:layout_constraintVertical_chainStyle="packed" />
@@ -74,21 +71,18 @@
             android:alpha="0.5"
             android:fontFamily="sans-serif-light"
             android:paddingTop="@dimen/welcome_passwords_items_offset"
-            android:text="@string/welcome_pass_medium"
+            android:text="@string/welcome_pass_empty"
             android:textSize="@dimen/welcome_passwords_info_text_size"
             app:layout_constraintBottom_toTopOf="@id/confirmPassTitle"
             app:layout_constraintTop_toBottomOf="@id/strengthView" />
 
         <TextView
             android:id="@+id/confirmPassTitle"
+            style="@style/common_password_title_style"
             android:layout_width="wrap_content"
             android:layout_height="wrap_content"
-            android:fontFamily="sans-serif"
             android:paddingTop="23dp"
-            android:paddingBottom="@dimen/welcome_password_title_padding_bottom"
             android:text="@string/welcome_confirm_pass_title"
-            android:textSize="@dimen/welcome_passwords_title_text_size"
-            android:textStyle="bold"
             app:layout_constraintBottom_toTopOf="@id/confirmPass"
             app:layout_constraintTop_toBottomOf="@id/strengthText" />
 
@@ -108,11 +102,22 @@
             android:layout_height="wrap_content"
             android:fontFamily="sans-serif-light"
             android:paddingTop="@dimen/welcome_passwords_items_offset"
-            android:text="@string/welcome_pass_not_much"
+            android:text="@string/welcome_pass_wrong"
             android:textColor="@color/common_error_color"
             android:textSize="@dimen/welcome_passwords_info_text_size"
+            android:visibility="invisible"
             app:layout_constraintBottom_toBottomOf="parent"
             app:layout_constraintTop_toBottomOf="@id/confirmPass" />
+
+        <ImageView
+            android:id="@+id/showPass"
+            android:layout_width="wrap_content"
+            android:layout_height="wrap_content"
+            android:contentDescription="@null"
+            app:layout_constraintBottom_toBottomOf="@id/confirmPass"
+            app:layout_constraintEnd_toEndOf="@id/confirmPass"
+            app:layout_constraintTop_toTopOf="@id/confirmPass"
+            app:srcCompat="@drawable/ic_show_pass" />
 
     </android.support.constraint.ConstraintLayout>
 
