--- a/android-application/app/src/main/res/layout/activity_utxo.xml
+++ b/android-application/app/src/main/res/layout/activity_utxo.xml
@@ -19,7 +19,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/common_margin"
             android:background="@color/colorPrimary"
-            app:cardCornerRadius="@dimen/utxo_card_corner_radius"
+            app:cardCornerRadius="@dimen/common_card_corner_radius"
             app:layout_constraintEnd_toStartOf="@id/hashLayout"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toStartOf="parent"
@@ -37,9 +37,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                     android:text="@string/utxo_height"
-                    android:textColor="@color/wallet_card_title_color"
-                    android:textSize="@dimen/utxo_card_title_text_size"
-                    android:textStyle="bold" />
+                    style="@style/common_header_big" />
 
                 <TextView
                     android:textColor="@color/colorAccent"
@@ -56,7 +54,7 @@
             android:layout_height="wrap_content"
             android:layout_margin="@dimen/common_margin"
             android:background="@color/colorPrimary"
-            app:cardCornerRadius="@dimen/utxo_card_corner_radius"
+            app:cardCornerRadius="@dimen/common_card_corner_radius"
             app:layout_constraintEnd_toEndOf="parent"
             app:layout_constraintHorizontal_weight="1"
             app:layout_constraintStart_toEndOf="@id/heightLayout"
@@ -74,9 +72,7 @@
                     android:layout_height="wrap_content"
                     android:background="@color/colorPrimary"
                     android:text="@string/utxo_hash"
-                    android:textColor="@color/wallet_card_title_color"
-                    android:textSize="@dimen/utxo_card_title_text_size"
-                    android:textStyle="bold" />
+                    style="@style/common_header_big" />
 
                 <TextView
                     android:textColor="@color/colorAccent"
