--- a/android-application/app/src/main/res/layout/fragment_wallet.xml
+++ b/android-application/app/src/main/res/layout/fragment_wallet.xml
@@ -33,7 +33,7 @@
         style="@style/wallet_card_style"
         android:layout_marginTop="@dimen/wallet_available_margin_top"
         android:animateLayoutChanges="true"
-        app:cardCornerRadius="@dimen/wallet_card_corner_radius"
+        app:cardCornerRadius="@dimen/common_card_corner_radius"
         app:layout_constraintTop_toBottomOf="@id/btnReceive">
 
         <android.support.constraint.ConstraintLayout
@@ -45,14 +45,8 @@
 
             <TextView
                 android:id="@+id/availableTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:paddingEnd="@dimen/wallet_expandable_icon_padding"
+                style="@style/wallet_card_title_style"
                 android:text="@string/wallet_available"
-                android:textColor="@color/wallet_card_title_color"
-                android:textSize="@dimen/wallet_card_title_text_size"
-                android:textStyle="bold"
                 tools:ignore="RtlSymmetry" />
 
             <View
@@ -83,7 +77,7 @@
                 android:fontFamily="sans-serif"
                 android:paddingStart="@dimen/wallet_available_text_padding_start"
                 android:paddingEnd="@dimen/wallet_available_text_padding_end"
-                android:textColor="@color/wallet_common_text_color"
+                android:textColor="@color/common_text_color"
                 android:textSize="@dimen/wallet_available_text_size"
                 app:layout_constraintStart_toEndOf="@id/icAvailableCurrency"
                 app:layout_constraintTop_toBottomOf="@id/availableTitle" />
@@ -112,7 +106,7 @@
         style="@style/wallet_card_style"
         android:layout_marginTop="@dimen/wallet_in_progress_margin_top"
         android:animateLayoutChanges="true"
-        app:cardCornerRadius="@dimen/wallet_card_corner_radius"
+        app:cardCornerRadius="@dimen/common_card_corner_radius"
         app:layout_constraintTop_toBottomOf="@id/availableLayout">
 
         <android.support.constraint.ConstraintLayout
@@ -124,14 +118,8 @@
 
             <TextView
                 android:id="@+id/inProgressTitle"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:background="@color/colorPrimary"
-                android:paddingEnd="@dimen/wallet_expandable_icon_padding"
+                style="@style/wallet_card_title_style"
                 android:text="@string/wallet_in_progress"
-                android:textColor="@color/wallet_card_title_color"
-                android:textSize="@dimen/wallet_card_title_text_size"
-                android:textStyle="bold"
                 tools:ignore="RtlSymmetry" />
 
             <View
@@ -164,6 +152,7 @@
 
     <TextView
         android:id="@+id/transactionsTitle"
+        style="@style/common_header_big"
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
         android:paddingStart="@dimen/common_padding"
@@ -171,9 +160,6 @@
         android:paddingEnd="@dimen/common_padding"
         android:paddingBottom="@dimen/transactions_title_padding"
         android:text="@string/wallet_transactions_title"
-        android:textColor="@color/transactions_title_color"
-        android:textSize="@dimen/transactions_title_text_size"
-        android:textStyle="bold"
         app:layout_constraintTop_toBottomOf="@id/inProgressLayout" />
 
     <ImageView
