--- a/android-application/app/src/main/res/layout/fragment_welcome_description.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_description.xml
@@ -6,13 +6,8 @@
 
     <TextView
         android:id="@+id/title"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
-        android:gravity="center_horizontal"
+        style="@style/welcome_common_title_text_style"
         android:text="@string/welcome_title"
-        android:textColor="@color/common_text_color"
-        android:textSize="30sp"
         app:layout_constraintBottom_toTopOf="@id/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
