--- a/android-application/app/src/main/res/layout/item_transaction.xml
+++ b/android-application/app/src/main/res/layout/item_transaction.xml
@@ -23,12 +23,10 @@
 
     <TextView
         android:id="@+id/message"
+        style="@style/common_header_small"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif-medium"
         android:gravity="start"
-        android:textColor="@color/transaction_sender_color"
-        android:textSize="@dimen/transaction_sender_text_size"
         app:layout_constraintBottom_toTopOf="@id/date"
         app:layout_constraintEnd_toStartOf="@id/barrier"
         app:layout_constraintHorizontal_bias="0.0"
@@ -38,12 +36,10 @@
 
     <TextView
         android:id="@+id/date"
+        style="@style/common_description"
         android:layout_width="0dp"
         android:layout_height="wrap_content"
-        android:fontFamily="sans-serif"
         android:gravity="start"
-        android:textColor="@color/transaction_data_color"
-        android:textSize="@dimen/transaction_data_text_size"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@id/barrier"
         app:layout_constraintHorizontal_bias="0.0"
