--- a/android-application/app/src/main/res/values/styles.xml
+++ b/android-application/app/src/main/res/values/styles.xml
@@ -21,6 +21,7 @@
         <item name="android:paddingTop">@dimen/welcome_button_text_padding_top</item>
         <item name="android:paddingBottom">@dimen/welcome_button_text_padding_bottom</item>
         <item name="android:layout_height">wrap_content</item>
+        <item name="android:fontFamily">@font/wallet_btn_font</item>
         <item name="android:gravity">center</item>
         <item name="android:textAllCaps">false</item>
         <item name="android:textStyle">bold</item>
@@ -33,47 +34,63 @@
         <item name="android:layout_marginEnd">@dimen/common_button_margin</item>
     </style>
 
-    <!-- WelcomeActivity -->
-    <style name="welcome_description_text_style">
+    <style name="common_header_big">
+        <item name="android:fontFamily">sans-serif</item>
         <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_header_big_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="common_header_small">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_header_small_text_size</item>
+        <item name="android:textStyle">bold</item>
+    </style>
+
+    <style name="common_subheader_light">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_subheader_text_size</item>
+    </style>
+
+    <style name="common_subheader_dark">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/common_subheader_dark_color</item>
+        <item name="android:textSize">@dimen/common_subheader_text_size</item>
+    </style>
+
+    <style name="common_description">
+        <item name="android:fontFamily">sans-serif</item>
+        <item name="android:textColor">@color/common_text_color</item>
+        <item name="android:textSize">@dimen/common_description_text_size</item>
+    </style>
+
+    <!-- WelcomeActivity -->
+    <style name="welcome_common_title_text_style">
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:fontFamily">sans-serif</item>
         <item name="android:gravity">center_horizontal</item>
-        <item name="android:textSize">@dimen/welcome_description_text_size</item>
-    </style>
-
-    <style name="common_password_title_style">
-        <item name=" android:fontFamily">sans-serif</item>
-        <item name="android:paddingBottom">@dimen/welcome_password_title_padding_bottom</item>
+        <item name="android:fontFamily">sans-serif-medium</item>
         <item name="android:textColor">@color/common_text_color</item>
-        <item name="android:textSize">@dimen/welcome_passwords_title_text_size</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:textSize">@dimen/welcome_title_text_size</item>
     </style>
 
-    <!-- OpenWalletActivity -->
-    <style name="welcome_password_view_style">
-        <item name="android:textColor">@color/password_text_color</item>
-        <item name="android:textSize">@dimen/welcome_passwords_text_size</item>
-        <item name="android:textStyle">bold</item>
+    <style name="welcome_description_text_style" parent="common_description">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:gravity">center_horizontal</item>
+    </style>
+
+    <style name="welcome_password_view_style" parent="common_header_big">
         <item name="android:textColorHint">@color/password_text_color</item>
         <item name="android:inputType">textPassword</item>
         <item name="android:background">@drawable/edit_text_underline</item>
         <item name="android:letterSpacing">@dimen/welcome_password_dots_space</item>
     </style>
 
-    <style name="open_wallet_text_input_layout_hint" parent="@android:style/TextAppearance">
-        <item name="android:textColor">@color/password_text_color</item>
-        <item name="android:textSize">@dimen/open_wallet_password_hint_size</item>
-    </style>
-
-    <style name="open_wallet_text_input_layout" parent="@android:style/TextAppearance">
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_marginStart">@dimen/open_wallet_password_margin</item>
-        <item name="android:layout_marginEnd">@dimen/open_wallet_password_margin</item>
-        <item name="android:layout_marginBottom">@dimen/open_wallet_password_margin</item>
-        <item name="android:textColorHint">@color/password_text_color</item>
+    <style name="welcome_password_title_style" parent="common_header_big">
+        <item name="android:paddingBottom">@dimen/welcome_password_title_padding_bottom</item>
     </style>
 
     <!-- WalletFragment -->
@@ -85,30 +102,27 @@
         <item name="android:background">@color/colorPrimary</item>
     </style>
 
-    <!-- TransactionDetails -->
-    <style name="transaction_details_title">
-        <item name="android:textColor">@color/common_text_color</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">@dimen/transaction_details_text_size</item>
+    <style name="wallet_card_title_style" parent="common_header_big">
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_width">match_parent</item>
-        <item name="android:textStyle">bold</item>
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:background">@color/colorPrimary</item>
+        <item name="android:paddingEnd">@dimen/wallet_expandable_icon_padding</item>
     </style>
 
-    <style name="transaction_details_sub_title">
-        <item name="android:textColor">@color/transaction_details_subtitle_color</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">@dimen/transaction_details_text_size</item>
+    <!-- TransactionDetails -->
+    <style name="transaction_details_title" parent="common_header_small">
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_width">match_parent</item>
+    </style>
+
+    <style name="transaction_details_sub_title" parent="common_subheader_dark">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:paddingEnd">@dimen/transaction_details_padding</item>
         <item name="android:paddingBottom">@dimen/transaction_details_padding</item>
     </style>
 
-    <style name="transaction_details_value">
-        <item name="android:textColor">@color/common_text_color</item>
-        <item name="android:fontFamily">sans-serif</item>
-        <item name="android:textSize">@dimen/transaction_details_text_size</item>
+    <style name="transaction_details_value" parent="common_subheader_light">
         <item name="android:layout_height">wrap_content</item>
         <item name="android:layout_width">wrap_content</item>
         <item name="android:paddingBottom">@dimen/transaction_details_padding</item>
