added phrases screen during creating new wallet

--- a/android-application/app/src/main/res/layout/fragment_welcome_main.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_main.xml
@@ -82,7 +82,7 @@
         style="@style/common_button_style"
         android:layout_marginTop="@dimen/welcome_button_margin_top"
         app:button_icon="@drawable/ic_btn_restore"
-        app:button_state_list="@color/restore_selector"
+        app:button_state_list="@color/primary_selector"
         app:button_text="@string/welcome_restore"
         app:button_text_color="@color/common_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
@@ -102,7 +102,7 @@
         style="@style/common_button_style"
         android:layout_marginTop="@dimen/welcome_button_margin_top"
         app:button_icon="@drawable/ic_btn_change"
-        app:button_state_list="@color/restore_selector"
+        app:button_state_list="@color/primary_selector"
         app:button_text="@string/welcome_login_to_another"
         app:button_text_color="@color/common_text_color"
         app:layout_constraintBottom_toBottomOf="parent"
