--- a/android-application/app/src/main/res/values/styles.xml
+++ b/android-application/app/src/main/res/values/styles.xml
@@ -80,6 +80,8 @@
         <item name="android:layout_width">wrap_content</item>
         <item name="android:layout_height">wrap_content</item>
         <item name="android:gravity">center_horizontal</item>
+        <item name="android:paddingStart">@dimen/welcome_description_side_offset</item>
+        <item name="android:paddingEnd">@dimen/welcome_description_side_offset</item>
     </style>
 
     <style name="welcome_password_view_style" parent="common_header_big">
