--- a/android-application/app/src/main/res/values/colors.xml
+++ b/android-application/app/src/main/res/values/colors.xml
@@ -32,6 +32,7 @@
 
     <!--WelcomePhrasesFragment-->
     <color name="phrase_number_text_color">#80d8d8d8</color>
+    <color name="phrase_validated_number_text_color">#02253c</color>
 
     <!--WalletFragment-->
     <color name="transaction_common_status_color">@color/common_text_color</color>
