--- a/android-application/app/src/main/res/layout/common_phrase_input.xml
+++ b/android-application/app/src/main/res/layout/common_phrase_input.xml
@@ -23,6 +23,7 @@
         android:layout_marginStart="@dimen/welcome_number_offset"
         android:background="@drawable/edit_text_underline"
         android:gravity="center_horizontal"
+        android:inputType="text"
         android:maxLines="1"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
