--- a/android-application/app/src/main/res/layout/fragment_welcome_recover.xml
+++ b/android-application/app/src/main/res/layout/fragment_welcome_recover.xml
@@ -8,7 +8,7 @@
         android:id="@+id/title"
         style="@style/welcome_common_title_text_style"
         android:layout_marginTop="@dimen/welcome_title_margin_top"
-        android:text="@string/welcome_title"
+        android:text="@string/welcome_restore_title"
         app:layout_constraintBottom_toTopOf="@id/description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
@@ -18,7 +18,7 @@
         android:id="@+id/description"
         style="@style/welcome_description_text_style"
         android:paddingTop="@dimen/common_padding"
-        android:text="@string/welcome_validation_description"
+        android:text="@string/welcome_restore_description"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="@id/title" />
@@ -32,15 +32,15 @@
         android:layout_marginBottom="@dimen/welcome_phrases_button_margin"
         android:columnCount="2"
         android:orientation="vertical"
-        app:layout_constraintBottom_toTopOf="@id/btnNext"
+        app:layout_constraintBottom_toTopOf="@id/btnRecover"
         app:layout_constraintTop_toBottomOf="@id/description" />
 
     <com.mw.beam.beamwallet.core.views.BeamButton
-        android:id="@+id/btnNext"
+        android:id="@+id/btnRecover"
         style="@style/common_button_style"
         android:layout_marginBottom="@dimen/welcome_phrases_button_margin"
-        app:button_icon="@drawable/ic_btn_proceed"
-        app:button_text="@string/welcome_next"
+        app:button_icon="@drawable/ic_btn_recover"
+        app:button_text="@string/welcome_recover"
         app:layout_constraintBottom_toBottomOf="parent" />
 
 </android.support.constraint.ConstraintLayout>
